src/tigr.nim


proc touch*(bmp: ptr Tigr; points: ptr TigrTouchPoint; maxPoints: cint): cint {.
    cdecl, importc: "tigrTouch", header: vim.}
##  Reads the keyboard for a window.
##  Returns non-zero if a key is pressed/held.
##  tigrKeyDown tests for the initial press, tigrKeyHeld repeats each frame.

proc keyDown*(bmp: ptr Tigr; key: TKey|cint): cint {.cdecl, importc: "tigrKeyDown",
    header: vim.}
proc keyHeld*(bmp: ptr Tigr; key: TKey|cint): cint {.cdecl, importc: "tigrKeyHeld",
    header: vim.}
##  Reads character input for a window.
##  Returns the Unicode value of the last key pressed, or 0 if none.

proc readChar*(bmp: ptr Tigr): cint {.cdecl, importc: "tigrReadChar",
                                      header: vim.}
##  Show / hide virtual keyboard.
##  (Only available on iOS / Android)

proc showKeyboard*(show: cint) {.cdecl, importc: "tigrShowKeyboard", header: vim.}
##  Bitmap I/O -------------------------------------------------------------
##  Loads a PNG, from either a file or memory. (fileName is UTF-8)
##  On error, returns NULL and sets errno.

proc loadImage*(fileName: cstring): ptr Tigr {.cdecl, importc: "tigrLoadImage",
    header: vim.}
proc loadImageMem*(data: pointer; length: cint): ptr Tigr {.cdecl,
    importc: "tigrLoadImageMem", header: vim.}
##  Saves a PNG to a file. (fileName is UTF-8)
##  On error, returns zero and sets errno.

proc saveImage*(fileName: cstring; bmp: ptr Tigr): cint {.cdecl,
    importc: "tigrSaveImage", header: vim.}
##  Helpers ----------------------------------------------------------------
##  Returns the amount of time elapsed since tigrTime was last called,
##  or zero on the first call.

proc time*(): cfloat {.cdecl, importc: "tigrTime", header: vim.}
##  Displays an error message and quits. (UTF-8)
##  'bmp' can be NULL.

proc error*(bmp: ptr Tigr; message: cstring) {.varargs, cdecl,
    importc: "tigrError", header: vim.}
##  Reads an entire file into memory. (fileName is UTF-8)
##  Free it yourself after with 'free'.
##  On error, returns NULL and sets errno.
##  TIGR will automatically append a NUL terminator byte
##  to the end (not included in the length)

proc readFile*(fileName: cstring; length: pointer): pointer {.cdecl,
    importc: "tigrReadFile", header: vim.}
##  Decompresses DEFLATEd zip/zlib data into a buffer.
##  Returns non-zero on success.

proc inflate*(`out`: pointer; outlen: cuint; `in`: pointer; inlen: cuint): cint {.
    cdecl, importc: "tigrInflate", header: vim.}
##  Decodes a single UTF8 codepoint and returns the next pointer.

proc decodeUTF8*(text: cstring; cp: pointer): cstring {.cdecl,
    importc: "tigrDecodeUTF8", header: vim.}
##  Encodes a single UTF8 codepoint and returns the next pointer.

proc encodeUTF8*(text: cstring; cp: cint): cstring {.cdecl,
    importc: "tigrEncodeUTF8", header: vim.}
